<resources>
    <string name="app_name">QLSinhVien</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="register">Đăng kí</string>
    <string name="password">Mật khẩu</string>
    <string name="username">Tên tài khoản</string>
    <string name="txtreturn">Quay lại</string>
    <string name="QLSV">Quản Lý Sinh Viên</string>
    <string name="Login">Đăng nhập</string>
    <string name="ForgotPassword">Quên mật khẩu ?</string>
    <string name="LoginName">Tên đăng nhập</string>
    <string name="Password">Mật khẩu</string>
    <string name="SignOut">Đăng xuất</string>
    <string name="Home">Trang chủ</string>
    <string name="Utility">Tiện ích</string>
    <string name="Statistic">Thống kê</string>
    <string name="Account">Tài khoản</string>
    <string name="List">Danh sách lớp học phần</string>
    <string name="ListSV">Danh sách sinh viên</string>
    <string name="ListGV">Danh sách giảng viên </string>
    <string name="infor">Thông tin cá nhân</string>
    <string name="change">Chỉnh sửa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Cài đặt</string>
    <string name="changepassword">Đổi mật khẩu</string>
    <string name="exit">Thoát </string>
    <string name="manage">Quản lý </string>
    <string name="UserManagement">Quản lý user</string>
    <string name="StudentTeacherManagement">Quản lý giảng viên</string>
    <string name="StudentScoreManagement">Quản lý điểm sinh viên</string>
    <string name="StudentListManagement">Quản lý danh sách sinh viên</string>
    <string name="ClassManagement">Quản lý lớp học </string>
    <string name="ListForgetPassword">Danh sách cấp lại mật khẩu</string>
    <string name="UserRegister">Đăng ký thành viên</string>
    <string name="AverageScoreStat">Thống kê điểm trung bình của sinh viên theo môn học</string>
    <string name="ManageStat">Thống kê quản lý</string>
    <string name="TeachingResult">Thống kê kết quả giảng dạy của giảng viên</string>
    <string name="User">Người dùng</string>
    <string name="major">Ngành: </string>
    <string name="Subject">Môn học: </string>
    <string name="Teacher">Giảng viên: </string>
    <string name="Class">Lớp: </string>
    <string name="NameUser">Tên </string>
    <string name="Birthday">Ngày sinh </string>
    <string name="Phone">Số điện thoại </string>
    <string name="Email">Email </string>
    <string name="Name">Tên:</string>
    <string name="MSSV">MSSV:</string>
    <string name="MSGV">Mã Giảng Viên:</string>
    <string name="Birth">Ngày sinh:</string>
    <string name="rClass">Lớp hành chính:</string>
    <string name="Khoa">Khoa:</string>
    <string name="scoreType">Loại Điểm</string>
    <string name="score">Điểm</string>
    <string name="weight">Trọng số</string>
    <string name="Success">Thành công</string>
    <string name="Fail">Thất bại</string>
    <string name="Done">Xong</string>
    <string name="title_activity_thong_tin_giang_vien">ThongTinGiangVienActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>