<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".fragment.HomeFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bottomnav"
        app:menu="@menu/menustat"
        app:popupTheme="@style/Theme.AppCompat.Light"
        app:title="@string/Statistic"
        app:titleTextColor="@color/white" />

    <Button
        android:id="@+id/averageScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/settingshape"
        android:text="@string/AverageScoreStat"

        app:backgroundTint="@null" />

    <Button
        android:id="@+id/manageStat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/settingshape"
        android:text="@string/ManageStat"

        app:backgroundTint="@null" />

    <Button
        android:id="@+id/teachingResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/settingshape"
        android:text="@string/TeachingResult"

        app:backgroundTint="@null" />

</LinearLayout>